--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,42 @@
 
+*{
+    margin: 0px;
+    
+}
+
+.section{
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.header{
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(3, 3, 3);
+    
+}
+
+.wraper{
+    padding: 0px 40px 0px 40px;
+}
+
+.header_wraper{
+    display: flex;
+    height: 100vh;
+    justify-content: start;
+    align-items: center;
+}
+
+.header__content{
+    display: flex;
+    flex-direction: column;
+    width:600px;
+    row-gap: 15px;
+    color: aliceblue;
+    
+}
+
+
+
+
 
