--- a/styles.css
+++ b/styles.css
@@ -4,39 +4,85 @@
     
 }
 
-.section{
-    padding-top: 40px;
-    padding-bottom: 40px;
+:root{
+    /* переменная с цветом */
+    --my-color: rgb(236, 106, 106);
 }
 
-.header{
+h1{
+    color: aliceblue;
+}
+
+a{
+    text-decoration: none;
+}
+
+.wrapper{
+    min-height: 100%;
+    /* чтобы не появлялся горизонтальный скрол на странице */
+    overflow: hidden; 
+}
+
+.container {
+    max-width: 1046px;
+    margin: 0px auto;
+    
+}
+
+.header {
+    background-color: rgb(50, 52, 51);
     height: 100vh;
     width: 100%;
-    background-color: rgb(3, 3, 3);
-    
 }
 
-.wraper{
-    padding: 0px 40px 0px 40px;
-}
-
-.header_wraper{
+.header__container {
     display: flex;
-    height: 100vh;
-    justify-content: start;
-    align-items: center;
-}
-
-.header__content{
-    display: flex;
+    height: 100vh; 
     flex-direction: column;
-    width:600px;
-    row-gap: 15px;
+    justify-content: center;
+    align-self: center;
+      
+}
+
+.header__bloc{
+    max-width: 600px;
+
+}
+.header__bloc_taitl {
+}
+.header__bloc_subtaitl {
+    padding-top: 10px;
+    padding-bottom: 20px;
     color: aliceblue;
-    
+}
+.header__bloc_subtaitl span{
+    color: var(--my-color);
+    text-transform: uppercase;
+}
+.header__bloc_button {
+}
+.button {
+    padding: 12px 24px 12px 24px;
+    align-self: start;
+    background:#4682B4;
+    color: rgb(248, 248, 248);
+    border-style: none;
+    border-radius: 30px;
+
 }
 
 
+/* -------------Второй блок------------- */
 
+.about {
 
-
+}
+.about__container {
+    display: flex;
+    height: 600px; 
+    flex-direction: column;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.taitl {
+}
