--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 
 *{
     margin: 0px;
-    
+    /* cвойство для того чтобы при падингах блок не растягивался */
+    box-sizing: border-box;
 }
 
 :root{
@@ -10,6 +11,7 @@
 }
 
 h1{
+    font-size: 40px;
     color: aliceblue;
 }
 
@@ -25,12 +27,13 @@ a{
 
 .container {
     max-width: 1046px;
+    
     margin: 0px auto;
     
 }
 
 .header {
-    background-color: rgb(50, 52, 51);
+    background-color: rgb(0, 0, 0);
     height: 100vh;
     width: 100%;
 }
@@ -45,44 +48,56 @@ a{
 }
 
 .header__bloc{
-    max-width: 600px;
+    max-width: 500px;
 
 }
-.header__bloc_taitl {
-}
-.header__bloc_subtaitl {
-    padding-top: 10px;
-    padding-bottom: 20px;
-    color: aliceblue;
-}
-.header__bloc_subtaitl span{
-    color: var(--my-color);
-    text-transform: uppercase;
-}
-.header__bloc_button {
-}
-.button {
-    padding: 12px 24px 12px 24px;
-    align-self: start;
-    background:#4682B4;
-    color: rgb(248, 248, 248);
-    border-style: none;
-    border-radius: 30px;
 
-}
 
 
 /* -------------Второй блок------------- */
 
 .about {
+    background: rgb(32, 32, 32);;
 
 }
 .about__container {
     display: flex;
-    height: 600px; 
+    height: auto; 
     flex-direction: column;
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 100px;
 }
 .taitl {
+    
+}
+
+.about_taitl{
+    /* display: flex; */
+    width: 220px;
+    height: 99px;
+    font-size: 30px;
+    /* align-items: center; */
+    color: #FFFFFF;
+}
+
+.about__bloc {
+}
+.bloc_img {
+    margin-top: 40px;
+    width: 300px;
+    height: 300px;
+    background-color: #D9D9D9;
+}
+.bloc_speshialy {
+    margin-top: 20px;
+    padding: 10px;
+    width: 196px;
+    background: #FFFFFF;
+    border-radius: 9px;
+    line-height: 22px;
+}
+.bloc_text {
+    max-width: 300px;
+    margin-top: 20px;
+    color: rgb(218, 213, 213);
 }
