--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,25 @@ a{
     margin-top: 20px;
     color: rgb(218, 213, 213);
 }
+
+
+/* -------------Третий блок------------- */
+
+.section-primery__container{
+    display: flex;
+    height: auto; 
+    flex-direction: column;
+    padding-top: 60px;
+    padding-bottom: 100px;
+}
+
+
+.section-primery_taitl{
+    /* display: flex; */
+    width: 220px;
+    height: 99px;
+    font-size: 30px;
+    /* align-items: center; */
+    color:rgb(32, 32, 32);;
+    ;
+}
