--- a/project1/01.css
+++ b/project1/01.css
@@ -125,6 +125,7 @@ a{
 
 
 .cards-wrapper{
+    
     padding-top: 60px;
     display: flex;
     justify-content: space-between;
@@ -140,7 +141,7 @@ a{
 }
 
 .card-body{
-    padding-top: 10px;
+    padding-top: 40px;
     padding-bottom: 40px;
     display: flex;
     justify-content:space-around
@@ -149,4 +150,23 @@ a{
 
 [data]{
     font-size: 40px;
+}
+
+.card-btn{
+    text-align: center;
+}
+
+.card-info{
+    text-align: center;
+}
+
+.price{
+    padding-top: 20px;
+}
+
+[name = "btn"]{
+    height: 30px;
+    width: 100%;
+    color: rgb(253, 253, 253);
+    background-color: black;
 }
